apps/kromgo/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-ingress
  namespace: kromgo
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kromgo
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kromgo-ingress
  namespace: kromgo
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/controller: kromgo
      app.kubernetes.io/instance: kromgo
      app.kubernetes.io/name: kromgo
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: public
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
